--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/arc-context.cpp (sp_arc_drag):
+	* src/rect-context.cpp (sp_rect_drag):
+	Simplification: use sp_desktop_dim_snap instead of
+	sp_desktop_horizontal_snap / sp_desktop_vertical_snap.
+
 	* src/desktop-snap.cpp (sp_desktop_vector_snap): Minor cleanups.
 
 	* src/libnr/Makefile.am, src/libnr/nr-point-fns-test.cpp:
