ru.po update from Alex Remizov and myself
(bzr r1506)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-14  buliabyak@users.sf.net
+
+	* ru.po update from Alex Remizov
+
 2004-02-11  buliabyak@users.sf.net
 
 	* fr.po update from f.rodrigo@tuxfamily.org
