--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,16 @@
+2004-02-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/helper/sp-canvas.h, src/helper/sp-canvas.cpp
+	(sp_canvas_world_pt_inside_window): New function.
+
 2004-02-18  MenTaLguY <mental@rydia.net>
 
-    * src/widgets/icon.cpp, src/widgets/icon.h: rewrote to use gdk for
+	* src/widgets/icon.cpp, src/widgets/icon.h: rewrote to use gdk for
 	  compositing; now it looks tolerable with ANY theme!
 
-    * src/dialogs/item-properties.cpp: slight stabs at implementing "visible"
+	* src/dialogs/item-properties.cpp: slight stabs at implementing "visible"
 
-    * src/libnr/nr-types.h: added warning for depreciated casts
+	* src/libnr/nr-types.h: added warning for deprecated casts
 
 2004-02-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
