es.po update from Lucas Vieites
(bzr r1613)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-20  buliabyak@users.sf.net
+
+	* es.po update from Lucas Vieites
+
 2004-02-14  buliabyak@users.sf.net
 
 	* ru.po update from Alex Remizov
