--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/select-toolbar.cpp (sp_object_layout_any_value_changed):
+	NR::Matrix'ification.
+
 2004-02-23  MenTaLguY <mental@rydia.net>
 
 	* src/selection-chemistry.cpp, src/selection-chemistry.h,
